# Schnaps-Shot

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs
.github/workflows/: release.yml
src/: gui.rs  main.rs
ui/: app.slint
